tests/NormalTests/paczka1/small_fuzzy/57315559.err
Error in line 9: lDSyNTxYO A66 ?5,7
Error in line 6: ObrO4pX A66 27,7
Error in line 2: lDSyNTxYO A476 22,6
